@@ -1,17 +1,19 @@
 package org.spring.chestnut.column.controller;
 
 
-import java.util.Arrays;
 import java.util.List;
 import lombok.extern.slf4j.Slf4j;
 import org.spring.chestnut.column.dto.ColumnListResponseDto;
 import org.spring.chestnut.column.dto.ColumnRequestDto;
 import org.spring.chestnut.column.dto.ColumnResponseDto;
+import org.spring.chestnut.column.dto.ColumnSequenceRequestDto;
 import org.spring.chestnut.column.entity.ColumnEntity;
 import org.spring.chestnut.column.service.ColumnServiceImpl;
 import org.spring.chestnut.global.dto.ResponseDto;
+import org.spring.chestnut.global.security.UserDetailsImpl;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -33,18 +35,21 @@ public class ColumnController {
 
     @GetMapping("/boards/{boardId}/columns")
     public ResponseEntity<ResponseDto<ColumnListResponseDto>> getColumn(
-        @PathVariable("boardId") Long boardId
+        @PathVariable("boardId") Long boardId,
+        @AuthenticationPrincipal UserDetailsImpl userDetails
     ) {
-        ColumnListResponseDto responseDto = columnServiceImpl.getColumn(boardId);
+        ColumnListResponseDto responseDto = columnServiceImpl.getColumn(boardId, userDetails);
         return ResponseDto.ok("컬럼 조회에 성공했습니다.", responseDto);
     }
 
     @PostMapping("/boards/{boardId}/columns")
     public ResponseEntity<ResponseDto<ColumnResponseDto>> createColumn(
         @PathVariable("boardId") Long boardId,
-        @RequestBody ColumnRequestDto requestDto
+        @RequestBody ColumnRequestDto requestDto,
+        @AuthenticationPrincipal UserDetailsImpl userDetails
     ) {
-        ColumnEntity createdColumn = columnServiceImpl.createColumn(boardId, requestDto);
+        ColumnEntity createdColumn = columnServiceImpl.createColumn(boardId, requestDto,
+            userDetails);
 
         ColumnResponseDto columnResponseDto = new ColumnResponseDto(createdColumn.getId(),
             createdColumn.getTitle(), createdColumn.getSequence());
@@ -55,31 +60,35 @@ public class ColumnController {
     @PutMapping("/columns/{columnId}")
     public ResponseEntity<ResponseDto<List<ColumnResponseDto>>> updateColumn(
         @PathVariable("columnId") Long columnId,
-        @RequestBody ColumnRequestDto requestDto
+        @RequestBody ColumnRequestDto requestDto,
+        @AuthenticationPrincipal UserDetailsImpl userDetails
     ) {
-        ColumnEntity updatedColumn = columnServiceImpl.updateColumn(columnId, requestDto);
+        ColumnEntity updatedColumn = columnServiceImpl.updateColumn(columnId, requestDto,
+            userDetails);
         ColumnResponseDto columnResponseDto = new ColumnResponseDto(updatedColumn.getId(),
             updatedColumn.getTitle(), updatedColumn.getSequence());
 
-        List<ColumnResponseDto> columnList = Arrays.asList(columnResponseDto);
-
+        List<ColumnResponseDto> columnList = List.of(columnResponseDto);
         return ResponseDto.ok("컬럼을 수정했습니다.", columnList);
     }
 
     @DeleteMapping("/columns/{columnId}")
     public ResponseEntity<Void> deleteColumn(
-        @PathVariable Long columnId
+        @PathVariable Long columnId,
+        @AuthenticationPrincipal UserDetailsImpl userDetails
     ) {
-        columnServiceImpl.deleteColumn(columnId);
+        columnServiceImpl.deleteColumn(columnId, userDetails);
         return ResponseEntity.noContent().build();
     }
 
-    @PutMapping("/columns/{columnId}/{sequence}")
+    @PutMapping("/columns/{columnId}/sequences")
     public ResponseEntity<ResponseDto<ColumnResponseDto>> updateSecuence(
         @PathVariable("columnId") Long columnId,
-        @PathVariable("sequence") Integer sequence
+        @RequestBody ColumnSequenceRequestDto requestDto,
+        @AuthenticationPrincipal UserDetailsImpl userDetails
     ) {
-        ColumnEntity updatedColumn = columnServiceImpl.updateSecuence(columnId, sequence);
+        ColumnEntity updatedColumn = columnServiceImpl.updateSecuence(columnId, requestDto,
+            userDetails);
         ColumnResponseDto columnResponseDto = new ColumnResponseDto(updatedColumn.getId(),
             updatedColumn.getTitle(), updatedColumn.getSequence());
 
